# Veloce

./: .gitignore  CMakeLists.txt  Makefile  README.md  auth.c  commits.c  loading.c  main.c  repos.c  vcs.h
